--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -233,6 +233,10 @@ input[data-error]::after {
     font-size: 0.4em;
     color: red;
 } */
+
+.invalid {
+  border: 3px solid red;
+}
 .checkbox-label,
 .checkbox2-label {
   position: relative;
