--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -11,14 +11,14 @@
 /* Landing Page */
 
 body {
-  margin: 0;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   background-image: url("background.png");
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
-  margin: 0 auto;
+  align-items: center;
 }
 
 p {
@@ -32,11 +32,14 @@ img {
 }
 
 .topnav {
+  width: 100%;
+  
   overflow: hidden;
   margin: 3.5%;
 }
 .header-logo {
     float: left;
+    margin-left: 15px
 }
 .main-navbar {
     float: right;
@@ -57,6 +60,11 @@ img {
   background-color: #ff0000;
   color: #ffffff;
   border-radius: 15px;
+  
+}
+
+.topnav a:hover span {
+  border-bottom: 1px solid;
 }
 
 .topnav a.active {
@@ -69,7 +77,7 @@ img {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .topnav a {display: none;}
   .topnav a.icon {
     float: right;
@@ -77,7 +85,7 @@ img {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
@@ -94,6 +102,22 @@ img {
 
 
  @media screen and (max-width: 540px) {
+  body {
+    align-items: initial;
+    margin-top: 10px;
+  }
+  #error {
+    font-size: large;
+  }
+
+  .main-navbar {
+    margin-top: 5px;
+  }
+  
+  .topnav img {
+    width: 150px;
+
+  }
   .topnav a {display: none;}
   .topnav a.icon {
     float: right;
@@ -425,7 +449,7 @@ input[data-error]::after {
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
+  
 }
 .hero-content::after {
   content: "";
@@ -467,6 +491,7 @@ input[data-error]::after {
   height: 100%;
   display: block;
   padding: 0;
+  object-fit: cover;
 }
 .copyrights {
   color: #fe142f;
@@ -500,12 +525,13 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 2.3rem;
     white-space: normal;
+    font-weight: bold;
   }
   .hero-text {
     width: unset;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
   .hero-img img {
     border-radius: 10px;
