--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -33,10 +33,13 @@ img {
 
 .topnav {
   width: 100%;
-  
   overflow: hidden;
   margin: 3.5%;
 }
+.topnav img {
+  width: auto; 
+  height: auto ;
+} 
 .header-logo {
     float: left;
     margin-left: 15px
@@ -106,7 +109,7 @@ img {
     align-items: initial;
     margin-top: 10px;
   }
-  #error {
+  .error {
     font-size: large;
   }
 
@@ -205,7 +208,7 @@ main {
   overflow: hidden;
   position: relative;
   color: #fff;
-  padding-top: 10px;
+  margin-top: 100px;
 }
 
 .modal-body {
